--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,9 @@ tokio-io = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
 tokio-reactor = "0.1"
+tokio-current-thread = "0.1"
 tower-service = "0.1"
+
 trust-dns-resolver = "0.10.0-alpha.2"
 
 # native-tls
