add framed related services and utils

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ bytes = "0.4"
 futures = "0.1"
 slab = "0.4"
 tokio = "0.1"
+tokio-codec = "0.1"
 tokio-io = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
