--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,12 @@ before_script:
 
 script:
   - |
-    if [[ "$TRAVIS_RUST_VERSION" != "stable" ]]; then
+    if [[ "$TRAVIS_RUST_VERSION" != "nightly" ]]; then
     cargo clean
     cargo test --features="ssl" -- --nocapture
     fi
   - |
-    if [[ "$TRAVIS_RUST_VERSION" == "stable" ]]; then
+    if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
     RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install -f cargo-tarpaulin
     cargo tarpaulin --features="ssl" --out Xml --no-count
     bash <(curl -s https://codecov.io/bash)
