--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ language-tags = "0.2"
 lazy_static = "1.0"
 lazycell = "1.0.0"
 parking_lot = "0.6"
+serde_urlencoded = "^0.5.3"
 url = { version="1.7", features=["query_encoding"] }
 cookie = { version="0.11", features=["percent-encode"] }
 brotli2 = { version="^0.3.2", optional = true }
@@ -125,7 +126,7 @@ webpki-roots = { version = "0.15", optional = true }
 # unix sockets
 tokio-uds = { version="0.2", optional = true }
 
-serde_urlencoded = "^0.5.3"
+backtrace="*"
 
 [dev-dependencies]
 env_logger = "0.5"
