--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,8 +118,8 @@ openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.2", optional = true }
 
 #rustls
-rustls = { version = "^0.13.1", optional = true }
-tokio-rustls = { version = "^0.7.2", optional = true }
+rustls = { version = "0.14", optional = true }
+tokio-rustls = { version = "0.8", optional = true }
 webpki = { version = "0.18", optional = true }
 webpki-roots = { version = "0.15", optional = true }
 
