--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ futures = "0.1"
 futures-cpupool = "0.1"
 slab = "0.4"
 tokio = "0.1"
+tokio-codec = "0.1"
 tokio-io = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
