--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,14 +30,11 @@ path = "src/lib.rs"
 [features]
 default = ["session", "cell"]
 
-# tls
+# native-tls
 tls = ["native-tls", "tokio-tls", "actix-net/tls"]
 
 # openssl
 ssl = ["openssl", "tokio-openssl", "actix-net/ssl"]
-
-# deprecated, use "ssl"
-alpn = ["openssl", "tokio-openssl", "actix-net/ssl"]
 
 # rustls
 rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots", "actix-net/rust-tls"]
@@ -61,7 +58,6 @@ http = "^0.1.8"
 httparse = "1.3"
 log = "0.4"
 mime = "0.3"
-percent-encoding = "1.0"
 rand = "0.5"
 serde = "1.0"
 serde_json = "1.0"
