--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,4 +37,5 @@ build: false
 
 # Equivalent to Travis' `script` phase
 test_script:
-  - cargo test --no-default-features --features="flate2-rust"
+  - cargo clean
+  - cargo test
