--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,15 +35,15 @@ session = ["cookie/secure"]
 cell = ["actix-net/cell"]
 
 [dependencies]
-actix = "0.7.0"
-actix-net = "0.1.0"
+actix = "0.7.5"
+actix-net = "0.1.1"
 #actix-net = { git="https://github.com/actix/actix-net.git" }
 
 base64 = "0.9"
 bitflags = "1.0"
-http = "^0.1.8"
+http = "0.1.8"
 httparse = "1.3"
-failure = "^0.1.2"
+failure = "0.1.2"
 log = "0.4"
 mime = "0.3"
 rand = "0.5"
@@ -53,7 +53,7 @@ sha1 = "0.6"
 time = "0.1"
 encoding = "0.2"
 lazy_static = "1.0"
-serde_urlencoded = "^0.5.3"
+serde_urlencoded = "0.5.3"
 cookie = { version="0.11", features=["percent-encode"] }
 
 # io
