--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ script:
   - |
     if [[ "$TRAVIS_RUST_VERSION" != "nightly" ]]; then
     cargo clean
+    cargo check --feature rust-tls
+    cargo check --feature ssl
+    cargo check --feature tls
     cargo test --features="ssl,tls,rust-tls" -- --nocapture
     fi
   - |
