--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,16 +34,26 @@ session = ["cookie/secure"]
 
 cell = ["actix-net/cell"]
 
+# tls
+tls = ["native-tls", "actix-net/tls"]
+
+# openssl
+ssl = ["openssl", "actix-net/ssl"]
+
+# rustls
+rust-tls = ["rustls", "actix-net/rust-tls"]
+
 [dependencies]
 actix = "0.7.5"
-actix-net = "0.2.0"
-#actix-net = { git="https://github.com/actix/actix-net.git" }
+#actix-net = "0.2.0"
+actix-net = { git="https://github.com/actix/actix-net.git" }
 
 base64 = "0.9"
 bitflags = "1.0"
 http = "0.1.8"
 httparse = "1.3"
 failure = "0.1.2"
+indexmap = "1.0"
 log = "0.4"
 mime = "0.3"
 rand = "0.5"
@@ -61,6 +71,7 @@ url = { version="1.7", features=["query_encoding"] }
 
 # io
 net2 = "0.2"
+slab = "0.4"
 bytes = "0.4"
 byteorder = "1.2"
 futures = "0.1"
@@ -70,6 +81,17 @@ tokio-io = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
 tokio-current-thread = "0.1"
+trust-dns-proto = "0.5.0"
+trust-dns-resolver = "0.10.0"
+
+# native-tls
+native-tls = { version="0.2", optional = true }
+
+# openssl
+openssl = { version="0.10", optional = true }
+
+#rustls
+rustls = { version = "^0.14", optional = true }
 
 [dev-dependencies]
 actix-web = "0.7"
