refactor client response payload handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,8 @@ rust-tls = ["rustls", "actix-net/rust-tls"]
 [dependencies]
 actix = "0.7.5"
 #actix-net = "0.2.0"
-actix-net = { git="https://github.com/actix/actix-net.git" }
+#actix-net = { git="https://github.com/actix/actix-net.git" }
+actix-net = { path="../actix-net" }
 
 base64 = "0.9"
 bitflags = "1.0"
