--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,9 +45,9 @@ rust-tls = ["rustls", "actix-net/rust-tls"]
 
 [dependencies]
 actix = "0.7.5"
-#actix-net = "0.2.0"
-#actix-net = { git="https://github.com/actix/actix-net.git" }
-actix-net = { path="../actix-net" }
+#actix-net = "0.2.2"
+actix-net = { git="https://github.com/actix/actix-net.git" }
+#actix-net = { path="../actix-net" }
 
 base64 = "0.9"
 bitflags = "1.0"
