--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,8 +91,10 @@ native-tls = { version="0.2", optional = true }
 # openssl
 openssl = { version="0.10", optional = true }
 
-#rustls
+# rustls
 rustls = { version = "^0.14", optional = true }
+
+backtrace="*"
 
 [dev-dependencies]
 actix-web = "0.7"
