cleanup clonable service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ tokio-tcp = "0.1"
 tokio-timer = "0.2"
 tokio-reactor = "0.1"
 tokio-current-thread = "0.1"
-tower-service = { path="../../actix/tower/tower-service/" }
+tower-service = { git = "https://github.com/tower-rs/tower.git" }
 trust-dns-proto = "^0.5.0"
 trust-dns-resolver = "^0.10.0"
 
