use new Service and NewService traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,8 @@ rust-tls = ["rustls", "actix-net/rust-tls"]
 
 [dependencies]
 actix = "0.7.5"
-actix-net = "0.2.3"
-#actix-net = { git="https://github.com/actix/actix-net.git" }
+#actix-net = "0.3.0"
+actix-net = { git="https://github.com/actix/actix-net.git" }
 
 base64 = "0.9"
 bitflags = "1.0"
