prepare actix-utils

--- a/actix-connector/Cargo.toml
+++ b/actix-connector/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "actix-net"
-version = "0.3.0"
+name = "actix-connector"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix net - framework for the compisible network services for Rust (experimental)"
+description = "Actix Connector - tcp connector service"
 readme = "README.md"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://actix.rs"
@@ -12,27 +12,13 @@ categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
-
-[workspace]
-members = [
-  "./",
-  "actix-codec",
-  "actix-connector",
-  "actix-service",
-  "actix-server",
-  "actix-rt",
-]
+workspace = "../"
 
 [package.metadata.docs.rs]
 features = ["ssl"]
 
-[badges]
-travis-ci = { repository = "actix/actix-net", branch = "master" }
-# appveyor = { repository = "fafhrd91/actix-web-hdy9d" }
-codecov = { repository = "actix/actix-net", branch = "master", service = "github" }
-
 [lib]
-name = "actix_net"
+name = "actix_connector"
 path = "src/lib.rs"
 
 [features]
@@ -41,27 +27,12 @@ default = []
 # openssl
 ssl = ["openssl", "tokio-openssl"]
 
-cell = []
-
 [dependencies]
 actix-service = "0.1.1"
-actix-codec = { path = "actix-codec" }
-actix-rt = { path = "actix-rt" }
-
-log = "0.4"
-num_cpus = "1.0"
-
-# io
-mio = "^0.6.13"
-net2 = "0.2"
-bytes = "0.4"
+actix-codec = { path = "../actix-codec" }
+actix-rt = { path = "../actix-rt" }
 futures = "0.1"
-slab = "0.4"
-tokio-io = "0.1"
 tokio-tcp = "0.1"
-tokio-timer = "0.2"
-tokio-reactor = "0.1"
-tokio-signal = "0.2"
 
 trust-dns-proto = "^0.5.0"
 trust-dns-resolver = "^0.10.0"
@@ -69,9 +40,6 @@ trust-dns-resolver = "^0.10.0"
 # openssl
 openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.3", optional = true }
-
-[dev-dependencies]
-env_logger = "0.5"
 
 [profile.release]
 lto = true
