--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,61 +28,55 @@ name = "actix_http"
 path = "src/lib.rs"
 
 [features]
-default = ["session", "cell"]
+default = ["session"]
 
 # sessions feature, session require "ring" crate and c compiler
 session = ["cookie/secure"]
 
-cell = ["actix-net/cell"]
-
-# tls
-tls = ["native-tls", "actix-net/tls"]
-
 # openssl
-ssl = ["openssl", "actix-net/ssl"]
-
-# rustls
-rust-tls = ["rustls", "actix-net/rust-tls"]
+ssl = ["openssl", "actix-connector/ssl"]
 
 [dependencies]
-actix = "0.7.5"
-#actix-net = "0.3.0"
-actix-net = { git="https://github.com/actix/actix-net.git" }
+actix-service = "0.1.1"
+actix-codec = { git="https://github.com/actix/actix-net.git" }
+actix-connector = { git="https://github.com/actix/actix-net.git" }
+actix-rt = { git="https://github.com/actix/actix-net.git" }
+actix-server = { git="https://github.com/actix/actix-net.git" }
+actix-utils = { git="https://github.com/actix/actix-net.git" }
+
+# actix-codec = { path="../actix-net/actix-codec/" }
+# actix-connector = { path="../actix-net/actix-connector/" }
+# actix-rt = { path="../actix-net/actix-rt/" }
+# actix-server = { path="../actix-net/actix-server/" }
+# actix-utils = { path="../actix-net/actix-utils/" }
 
 base64 = "0.9"
 bitflags = "1.0"
+bytes = "0.4"
+byteorder = "1.2"
+cookie = { version="0.11", features=["percent-encode"] }
+encoding = "0.2"
+failure = "0.1.3"
+futures = "0.1"
 http = "0.1.8"
 httparse = "1.3"
-failure = "0.1.3"
 indexmap = "1.0"
 log = "0.4"
 mime = "0.3"
+net2 = "0.2"
+percent-encoding = "1.0"
 rand = "0.5"
 serde = "1.0"
 serde_json = "1.0"
 sha1 = "0.6"
-time = "0.1"
-encoding = "0.2"
-serde_urlencoded = "0.5.3"
-
-cookie = { version="0.11", features=["percent-encode"] }
-percent-encoding = "1.0"
-url = { version="1.7", features=["query_encoding"] }
-
-# io
-net2 = "0.2"
 slab = "0.4"
-bytes = "0.4"
-byteorder = "1.2"
-futures = "0.1"
-tokio-codec = "0.1"
-tokio = "0.1"
-tokio-io = "0.1"
+serde_urlencoded = "0.5.3"
+time = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
-tokio-current-thread = "0.1"
 trust-dns-proto = "0.5.0"
 trust-dns-resolver = "0.10.0"
+url = { version="1.7", features=["query_encoding"] }
 
 # native-tls
 native-tls = { version="0.2", optional = true }
