--- a/actix-connector/Cargo.toml
+++ b/actix-connector/Cargo.toml
@@ -29,7 +29,7 @@ ssl = ["openssl", "tokio-openssl"]
 
 [dependencies]
 actix-service = "0.1.1"
-actix-codec = { path = "../actix-codec" }
+actix-codec = "0.1.0"
 actix-rt = { path = "../actix-rt" }
 futures = "0.1"
 tokio-tcp = "0.1"
@@ -40,8 +40,3 @@ trust-dns-resolver = "^0.10.0"
 # openssl
 openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.3", optional = true }
-
-[profile.release]
-lto = true
-opt-level = 3
-codegen-units = 1
