--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -18,10 +18,10 @@ name = "actix_utils"
 path = "src/lib.rs"
 
 [dependencies]
-actix-service = "0.1.2"
+actix-service = "0.1.6"
 actix-codec = "0.1.0"
-actix-rt = "0.1.0"
 bytes = "0.4"
 futures = "0.1"
 tokio-timer = "0.2.8"
+tokio-current-thread = "0.1"
 log = "0.4"
