--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ session = ["cookie/secure"]
 ssl = ["openssl", "actix-connector/ssl"]
 
 [dependencies]
-actix-service = "0.1.3"
+actix-service = "0.1.6"
 actix-codec = "0.1.0"
 actix-connector = "0.1.0"
 actix-rt = "0.1.0"
@@ -50,7 +50,7 @@ actix-utils = "0.1.0"
 # actix-server = { path="../actix-net/actix-server/" }
 # actix-utils = { path="../actix-net/actix-utils/" }
 
-base64 = "0.9"
+base64 = "0.10"
 backtrace = "0.3"
 bitflags = "1.0"
 bytes = "0.4"
@@ -66,7 +66,7 @@ log = "0.4"
 mime = "0.3"
 net2 = "0.2"
 percent-encoding = "1.0"
-rand = "0.5"
+rand = "0.6"
 serde = "1.0"
 serde_json = "1.0"
 sha1 = "0.6"
@@ -75,14 +75,14 @@ serde_urlencoded = "0.5.3"
 time = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
-trust-dns-resolver = "0.10.1"
+trust-dns-resolver = { version="0.11.0-alpha.1", default-features = false }
 
 # openssl
 openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-web = "0.7"
-env_logger = "0.5"
+env_logger = "0.6"
 serde_derive = "1.0"
 
 [profile.release]
