--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-http"
+name = "actix-http-test"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix http"
@@ -18,13 +18,8 @@ edition = "2018"
 [package.metadata.docs.rs]
 features = ["session"]
 
-[badges]
-travis-ci = { repository = "actix/actix-web", branch = "master" }
-appveyor = { repository = "fafhrd91/actix-web-hdy9d" }
-codecov = { repository = "actix/actix-web", branch = "master", service = "github" }
-
 [lib]
-name = "actix_http"
+name = "actix_http_test"
 path = "src/lib.rs"
 
 [features]
@@ -34,53 +29,36 @@ default = ["session"]
 session = ["cookie/secure"]
 
 # openssl
-ssl = ["openssl", "actix-connector/ssl"]
+ssl = ["openssl", "actix-http/ssl"]
 
 [dependencies]
+actix-codec = "0.1"
 actix-service = "0.1.6"
-actix-codec = "0.1.0"
-# actix-connector = "0.1.0"
-# actix-utils = "0.1.0"
-actix-connector = { git = "https://github.com/actix/actix-net.git" }
+actix-rt = "0.1.0"
+actix-server = "0.1.0"
+actix-http = { path=".." }
 actix-utils = { git = "https://github.com/actix/actix-net.git" }
 
 # actix-codec = { path="../actix-net/actix-codec/" }
-# actix-connector = { path="../actix-net/actix-connector/" }
-# actix-utils = { path="../actix-net/actix-utils/" }
+# actix-rt = { path="../actix-net/actix-rt/" }
+# actix-server = { path="../actix-net/actix-server/" }
 
 base64 = "0.10"
-backtrace = "0.3"
-bitflags = "1.0"
 bytes = "0.4"
-byteorder = "1.2"
 cookie = { version="0.11", features=["percent-encode"] }
-derive_more = "0.13"
-encoding = "0.2"
 futures = "0.1"
 http = "0.1.8"
-httparse = "1.3"
-indexmap = "1.0"
 log = "0.4"
-mime = "0.3"
-percent-encoding = "1.0"
-rand = "0.6"
+env_logger = "0.6"
+net2 = "0.2"
 serde = "1.0"
 serde_json = "1.0"
 sha1 = "0.6"
 slab = "0.4"
 serde_urlencoded = "0.5.3"
 time = "0.1"
+tokio-tcp = "0.1"
 tokio-timer = "0.2"
-tokio-current-thread = "0.1"
-trust-dns-resolver = { version="0.11.0-alpha.1", default-features = false }
 
 # openssl
 openssl = { version="0.10", optional = true }
-
-[dev-dependencies]
-actix-rt = "0.1.0"
-actix-web = "0.7"
-actix-server = "0.1"
-actix-http-test = { path="test-server" }
-env_logger = "0.6"
-serde_derive = "1.0"
