--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,6 @@ actix-codec = "0.1.0"
 actix-connector = { git = "https://github.com/actix/actix-net.git" }
 actix-utils = { git = "https://github.com/actix/actix-net.git" }
 
-# actix-codec = { path="../actix-net/actix-codec/" }
-# actix-connector = { path="../actix-net/actix-connector/" }
-# actix-utils = { path="../actix-net/actix-utils/" }
-
 base64 = "0.10"
 backtrace = "0.3"
 bitflags = "1.0"
@@ -57,6 +53,8 @@ cookie = { version="0.11", features=["percent-encode"] }
 derive_more = "0.13"
 encoding = "0.2"
 futures = "0.1"
+hashbrown = "0.1.8"
+h2 = "0.1.16"
 http = "0.1.8"
 httparse = "1.3"
 indexmap = "1.0"
