--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ edition = "2018"
 features = ["session"]
 
 [badges]
-travis-ci = { repository = "actix/actix-web", branch = "master" }
-appveyor = { repository = "actix/actix-http-hdy9d" }
-codecov = { repository = "actix/actix-web", branch = "master", service = "github" }
+travis-ci = { repository = "actix/actix-http", branch = "master" }
+appveyor = { repository = "fafhrd91/actix-http-b1qsn" }
+codecov = { repository = "actix/actix-http", branch = "master", service = "github" }
 
 [lib]
 name = "actix_http"
